fixed character sheet image overflow

--- a/less/update/components/actor-global.less
+++ b/less/update/components/actor-global.less
@@ -60,6 +60,11 @@
                 grid-column-start: 1;
                 grid-row-start: 1;
                 grid-row-end: 4;
+                box-sizing: border-box;
+                border: none;
+                border-radius: 0;
+                max-width: 100%;
+                max-height: 100%;
             }
 
             h1.character-name {
